Customers can now be created via stripe

--- a/config/locales/env.yml
+++ b/config/locales/env.yml
@@ -21,3 +21,7 @@
 
 en:
   hello: "Hello world"
+  LIVE_SECRET_KEY: "sk_live_44kImBGyKS4rIjMWcIyPhSfv"
+  LIVE_PUBLISHABLE_KEY: "pk_live_hZsgnoIh98zrODKi0qb8cIxT"
+  TEST_SECRET_KEY: "sk_test_rG4AezyEfV84wVOflssYHgWR"
+  TEST_PUBLISHABLE_KEY: "pk_test_tWQeOA5qD5d6vJ7ns6rr5Nvc"
